--- a/views/submission-manager/anim.html
+++ b/views/submission-manager/anim.html
@@ -11,9 +11,9 @@
 		  <!--<input type="button" class="play" value="Exécuter tout" />
 		  <input type="button" class="pause" value="Exécuter une étape" />
 		  <input type="button" class="restart" value="Recommencer" />-->
-        <button href="#" class="play btn btn-default">Exécuter tout</button>
-        <button href="#" class="pause btn btn-default">Exécuter une étape</button>
-        <button href="#" class="restart btn btn-default">Recommencer</button>
+        <button href="#" class="play btn btn-default" ng-i18next="player_play"></button>
+        <button href="#" class="pause btn btn-default" ng-i18next="player_playpause"></button>
+        <button href="#" class="restart btn btn-default" ng-i18next="player_restart"></button>
 	   </div>
 	   <pre class="textOutput" style="display:none;background:#C0C0C0;text-align:left">
 	   </pre>
