Fix floatingPointException display

--- a/views/submission-manager/view_test.html
+++ b/views/submission-manager/view_test.html
@@ -76,7 +76,7 @@
       </span>
       <span ng-switch-when="abort" ng-i18next="submission_result_abort_description"></span>
       <span ng-switch-when="busError" ng-i18next="submission_result_buserror_description"></span>
-      <span ng-switch-when="floatingPointExpression" ng-i18next="submission_result_floating_description"></span>
+      <span ng-switch-when="floatingPointException" ng-i18next="submission_result_floating_description"></span>
       <span ng-switch-when="memory">
          <span ng-i18next="submission_result_memory_description"></span>
          <ul>
