Show submission language only if there are multiple ones

--- a/views/submission-manager/header_template.html
+++ b/views/submission-manager/header_template.html
@@ -4,7 +4,8 @@
       <span class="glyphicon glyphicon-ok image_succeed_task checkImage" ng-show="submission.bEvaluated && submission.bSuccess"></span>
       <span class="glyphicon glyphicon-remove image_failure_task checkImage" ng-show="submission.bEvaluated && !submission.bSuccess"></span>
       <span ng-show="submission.bEvaluated">
-         <span ng-i18next="submission_lang"></span> {{submission.sourceLang}}
+         <span ng-i18next="submission_submission"></span>
+         <span ng-show="submission.sourceLang"><span ng-i18next="submission_lang"></span> {{submission.sourceLang}}</span>
          <span ng-i18next="submission_date"></span> {{submission.sDate | date:'short' }}
       </span>
       <span ng-show="!submission.bEvaluated" ng-i18next="submission_evaluation">
